Pekko app: add JSON